Desafio/force-app/main/default/objects/Produto__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotação</label>
    <referenceTo>Cotacao__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>