Desafio/force-app/main/default/objects/Produto__c/fields/Margem_de_Lucro__c.field-meta.xml
<CustomField>
    <fullName>Margem_de_Lucro__c</fullName>
    <label>Margem de Lucro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>