Desafio/force-app/main/default/objects/Produto__c/fields/Valor_Final__c.field-meta.xml
<CustomField>
    <fullName>Valor_Final__c</fullName>
    <formula>(((Valor_Unitario__c * Quantidade__c) +
((Valor_Unitario__c * Quantidade__c) *  Porcentagem_de_Imposto__c ) + (( (Valor_Unitario__c * Quantidade__c) + (Valor_Unitario__c * Quantidade__c) *  Porcentagem_de_Imposto__c ) *  Margem_de_Lucro__c)  )) * (1 -  Desconto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>